# skywalking-python

./: .gitignore  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: CI.yaml  publish-docker.yaml
docker/: Dockerfile  Makefile
docs/en/contribution/: Developer.md  How-to-test-locally.md  PluginTest.md
skywalking/meter/: counter.py
skywalking/plugins/: sw_kafka.py
tests/e2e/base/: Dockerfile.e2e  docker-compose.base.yml
tests/e2e/base/provider/: provider.py
tests/e2e/base/tmp/: application.yml
tests/e2e/case/grpc/: e2e.yaml
tests/e2e/case/http/: e2e.yaml
tests/e2e/script/: env
